 - Plugin API: Added "id" to xchat_get_prefs (Lian Wan Situ).
 - Plugin API: Changed xchat_find_context (ph, channel, NULL) to return
   results from the same server group as the current context when
   possible.(Lian Wan Situ)
 - 
 - Perl:
  - using emit_print/command/recv will no longer trigger their own
    callbacks
  - Fix compiling issues with versions older than 5.8.2.

----------------------------------------------------------------------
 2.6.0 - 03/Nov/2005
----------------------------------------------------------------------

 - Updated translations (nl, zh_TW).
 - Message boxes are now warning, error or info with appropriate icon.
 - Red marker line feature enabled by default.
 - Added /SEND <nick> [file] which will automatically switch to PSEND
   when detecting a private net address.
 - Simplified default nick-right-click menu.
 - Show "Last Talk" in nick-right-click menu as "minutes ago".
 - Strip mIRC colour from away message in right-click menu.
 - Warn when opening banlist in non-channel.
 - Reorganised and simplified IRC/Server menus and new View menu.
 - The editable Server menu is no more, if you want it type
   /set gui_usermenu 1 and restart.
 - Option to view channels in tabs or tree structure.
 - Shorter titlebar text for better viewing in taskbar.
 - Disabled key-search in server list, as GTK's auto-find does this
   better.
 - Removed "Connect in new tab" button in server list, it now does it
   intelligently. Use stock Connect icon.
 - Removed "Tint (shade) transparency" item from settings and figure
   it out based on tint values.
 - When closing a tab, re-focus the one near by, instead of always the
   last.
 - Firefox style close button.
 - The lag and throttle metres now have tooltips that give you real
   information (hover the pointer over them).
 - Added workaround to show on-join ChanServ notices in the right tab.
 - Tab scroll buttons are now side-by-side when in vertical mode.